# pythos

./: .cursorrules  .env.example  .gitignore  LICENSE  README.md  cline.py  config.yaml  config.yml.example  justfile  main.py  pyproject.toml  pytest.ini  requirements.txt  scan_directory.py  setup.py
.github/scripts/: overwrite_changeset_changelog.py
.github/workflows/: ci.yml
docs/: agent-architecture.md
examples/: simple_task.py  yaml_config_example.py
llm_agent/: README.md  __init__.py  agent.py  config.py
llm_agent/callbacks/: __init__.py  base.py
llm_agent/debug/: __init__.py
llm_agent/llm/: __init__.py  base.py  openai.py  prompts.py  rate_limiter.py
llm_agent/logging/: __init__.py  base.py  typer_logger.py
llm_agent/state/: __init__.py  config.py  json_utils.py  task_state.py
llm_agent/state/storage/: __init__.py
llm_agent/tools/: __init__.py  base.py  file_operations.py
tests/: conftest.py  requirements-test.txt  test_agent.py  test_llm.py  test_prompts.py  test_rate_limiter.py  test_tools.py
